fixed counter sync and overlapping counters problems

--- a/web-dev-course/3.JAVASCRIPT/010.javascript-scrap/sass/style.sass
+++ b/web-dev-course/3.JAVASCRIPT/010.javascript-scrap/sass/style.sass
@@ -95,6 +95,16 @@ header
   display: flex
   justify-content: center
 
+.counting-machine
+  display: flex
+  flex-direction: column
+  align-content: center
+
+input
+  width: 80px 
+  align-self: center
+  margin: 20px
+
 // NOTES AREA
 
 .code-purple
